# RadioSFSEPlugin

./: CMakeLists.txt  README.md  README_modders.html  README_modders.md  RadioSFSE.ini.example  StarfieldConsole.hotkeys.ini.example  StarfieldCustom.hotkeys.ini.example  build_windows.cmd  exports.def
scripts/: RadioSFSENative.psc  RadioSFSE_AutostartQuestScript.psc  RadioSFSE_PlaySlateScript.psc  RadioSFSE_StopSlateScript.psc  STAR_Forward_Control_Slate_Script.psc  STAR_Media_Type_Control_Slate.psc  STAR_Play_Stop_Control_Slate_Script.psc  STAR_Player_Alias_Script.psc  STAR_Playlist_Control_Slate_Script.psc  STAR_Radio_Headset_Script.psc  STAR_Radio_Message_Script.psc  STAR_Radio_Shortcut_Weapon_Script.psc  STAR_Radio_Terminal_Menu_Script.psc  STAR_Start_Quest_Script.psc  STAR_radio_script.psc
src/: commonlib_rex_log.cpp  logger.cpp  logger.h  papyrus_bridge.cpp  papyrus_bridge.h  plugin.cpp  radio_engine.cpp  radio_engine.h
